--- a/index.html
+++ b/index.html
@@ -225,13 +225,10 @@
                                         
                                     </div>
                                     <div class="text-center p-4">
-                                        <a href="#" class="btn btn-primary btn-primary-outline-0 rounded-pill py-3 px-5">Ver mas</a>
+                                        <a href="#" class="btn btn-primary btn-primary-outline-0 rounded-pill py-3 px-5">Ver más</a>
                                     </div>
                                    
                                     <div class="team-social">
-                                        <a class="btn btn-light btn-light-outline-0 btn-square rounded-circle mb-2" href="#"><i class="fab fa-twitter"></i></a>
-                                        <a class="btn btn-light btn-light-outline-0 btn-square rounded-circle mb-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                                        <a class="btn btn-light btn-light-outline-0 btn-square rounded-circle mb-2" href="#"><i class="fab fa-linkedin-in"></i></a>
                                         <a class="btn btn-light btn-light-outline-0 btn-square rounded-circle" href="#"><i class="fab fa-instagram"></i></a>
                                     </div>
                                 </div>
@@ -239,7 +236,7 @@
                             <div class="col-md-6 col-lg-6 col-xl-3">
                                 <div class="team-item">
                                     <div class="team-img rounded-top">
-                                        <img src="img/team-2.png" class="img-fluid w-100 rounded-top bg-light" alt="">
+                                        <img src="img/team-2.jpeg" class="img-fluid w-100 rounded-top bg-light" alt="">
                                     </div>
                                     <div class="team-text rounded-bottom text-center p-4">
                                         <h3 class="text-white">Charlotte Ross</h3>
