--- a/index.html
+++ b/index.html
@@ -201,19 +201,14 @@
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-5">
                         <div class="video">
-                            <img src="img/about-1.jpg" class="img-fluid rounded" alt="">
-                            <div class="position-absolute rounded border-5 border-top border-start border-white" style="bottom: 0; right: 0;;">
-                                <img src="img/about-2.jpg" class="img-fluid rounded" alt="">
-                            </div>
-                            <button type="button" class="btn btn-play" data-bs-toggle="modal" data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-bs-target="#videoModal">
-                                <span></span>
-                            </button>
+                            <img src="img/about-1.png" class="img-fluid rounded" alt="">                         
                         </div>
                     </div>
                     <div class="col-lg-7">
-                        <p class="fs-4 text-uppercase text-primary">About Us</p>
-                        <h1 class="display-4 mb-4">Your Best Spa, Beauty & Skin Care Center</h1>
-                        <p class="mb-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled
+                        <p class="fs-4 text-uppercase text-primary">Conócenos</p>
+                        <h1 class="display-4 mb-4">🏡 Bienvenidos</h1>
+                        <p class="mb-4">tu destino para mejorar tu hogar y consentir a los más pequeños de la casa.
+                             Explora nuestra selección de productos de alta calidad, desde utensilios de cocina hasta accesorios de decoración, diseñados para hacer de tu hogar un lugar aún más especial. Además, descubre nuestra colección especial para niños y niñas, con todo lo necesario para su comodidad y diversión. ¡Haz de tu hogar un espacio único con Conócenos! Visítanos hoy mismo. 🌟
                         </p>
                         <div class="row g-4">
                             <div class="col-md-6">
