--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 
 
         <!-- Gallery Start -->
-        <div class="container-fluid gallery py-5">
+        <!--<div class="container-fluid gallery py-5">
             <div class="container py-5">
                 <div class="text-center mx-auto mb-5" style="max-width: 800px;">
                     <p class="fs-4 text-uppercase text-primary">Our Gallery</p>
@@ -700,8 +700,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- gallery End -->
+        </div>-->
+        <!-- gallery End --> 
 
 
         <!-- Pricing Start -->
