--- a/price.html
+++ b/price.html
@@ -46,18 +46,15 @@
                     <div class="row align-items-center">
                         <div class="col-lg-8">
                             <div class="d-flex flex-wrap">
-                                <a href="#" class="me-4 text-light"><i class="fas fa-map-marker-alt text-primary me-2"></i>Find A Location</a>
+                                <a href="#" class="me-4 text-light"><i class="fas fa-map-marker-alt text-primary me-2"></i>Bogotá</a>
                                 <a href="#" class="me-4 text-light"><i class="fas fa-phone-alt text-primary me-2"></i>+01234567890</a>
-                                <a href="#" class="text-light"><i class="fas fa-envelope text-primary me-2"></i>Example@gmail.com</a>
                             </div>
 
                         </div>
                         <div class="col-lg-4">
                             <div class="d-flex align-items-center justify-content-end">
                                 <a href="#" class="me-3 btn-square border rounded-circle nav-fill"><i class="fab fa-facebook-f"></i></a>
-                                <a href="#" class="me-3 btn-square border rounded-circle nav-fill"><i class="fab fa-twitter"></i></a>
                                 <a href="#" class="me-3 btn-square border rounded-circle nav-fill"><i class="fab fa-instagram"></i></a>
-                                <a href="#" class="btn-square border rounded-circle nav-fill"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
                     </div>
@@ -67,18 +64,18 @@
                 <div class="container px-0">
                     <nav class="navbar navbar-light navbar-expand-xl">
                         <a href="index.html" class="navbar-brand">
-                            <h1 class="text-primary display-4">Sparlex</h1>
+                            <img src="img/2.png" class="logo img-fluid" alt="Image">
                         </a>
                         <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                             <span class="fa fa-bars text-primary"></span>
                         </button>
                         <div class="collapse navbar-collapse bg-light py-3" id="navbarCollapse">
                             <div class="navbar-nav mx-auto border-top">
-                                <a href="index.html" class="nav-item nav-link">Home</a>
-                                <a href="about.html" class="nav-item nav-link">About</a>
-                                <a href="service.html" class="nav-item nav-link">Services</a>
-                                <a href="price.html" class="nav-item nav-link active">Price</a>
-                                <div class="nav-item dropdown">
+                                <a href="index.html" class="nav-item nav-link active">Inicio</a>
+                                <a href="about.html" class="nav-item nav-link">Nosotros</a>
+                                <a href="service.html" class="nav-item nav-link">Sevicios</a>
+                                <a href="price.html" class="nav-item nav-link">Comprar</a>      
+                                <!-- <div class="nav-item dropdown">
                                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                                     <div class="dropdown-menu m-0 bg-secondary rounded-0">
                                         <a href="team.html" class="dropdown-item">Team</a>
@@ -87,13 +84,13 @@
                                         <a href="appointment.html" class="dropdown-item">Appointment</a>
                                         <a href="404.html" class="dropdown-item">404 page</a>
                                     </div>
-                                </div>
-                                <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+                                </div> -->
+                                <a href="contact.html" class="nav-item nav-link">Contáctanos</a>
                             </div>
-                            <div class="d-flex align-items-center flex-nowrap pt-xl-0">
+                            <!-- <div class="d-flex align-items-center flex-nowrap pt-xl-0">
                                 <button class="btn-search btn btn-primary btn-primary-outline-0 rounded-circle btn-lg-square" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search"></i></button>
                                 <a href="index.html" class="btn btn-primary btn-primary-outline-0 rounded-pill py-3 px-4 ms-4">Book Appointment</a>
-                            </div>
+                            </div> -->
                         </div>
                     </nav>
                 </div>
@@ -103,7 +100,7 @@
 
 
         <!-- Modal Search Start -->
-        <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <!-- <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-fullscreen">
                 <div class="modal-content rounded-0">
                     <div class="modal-header">
@@ -118,7 +115,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Modal Search End -->
 
 
@@ -218,6 +215,99 @@
         </div>
         <!-- Pricing End -->
 
+                <!-- Header Start -->
+                <div class="container-fluid bg-breadcrumb py-5">
+                    <div class="container text-center py-5">
+                        <h3 class="text-white display-3 mb-4">Our Price Plan</h1>
+                        <ol class="breadcrumb justify-content-center mb-0">
+                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                            <li class="breadcrumb-item"><a href="#">Pages</a></li>
+                            <li class="breadcrumb-item active text-white">price Page</li>
+                        </ol>    
+                    </div>
+                </div>
+                <!-- Header End -->
+        
+                
+                <!-- Pricing Start -->
+                <div class="container-fluid pricing py-5" style="background: var(--bs-primary);">
+                    <div class="container py-5">
+                        <div class="owl-carousel pricing-carousel">
+                            <div class="pricing-item">
+                                <div class="rounded pricing-content">
+                                    <div class="d-flex align-items-center justify-content-between bg-light rounded-top border-3 border-bottom border-primary p-4">
+                                        <h1 class="display-4 mb-0">
+                                            <small class="align-top text-muted" style="font-size: 22px; line-height: 45px;">$</small>49<small class="text-muted" style="font-size: 16px; line-height: 40px;">/Mo</small>
+                                        </h1>
+                                        <h5 class="text-primary text-uppercase m-0">Basic Plan</h5>
+                                    </div>
+                                    <div class="p-4">
+                                        <p><i class="fa fa-check text-primary me-2"></i>Full Body Massage</p>
+                                        <p><i class="fa fa-check text-primary me-2"></i>Deep Tissue Massage</p>
+                                        <p><i class="fa fa-check text-primary me-2"></i>Hot Stone Massage</p>
+                                        <p><i class="fa fa-check text-primary me-2"></i>Tissue Body Polish</p>
+                                        <p><i class="fa fa-check text-primary me-2"></i>Foot & Nail Care</p>
+                                        <a href="" class="btn btn-primary btn-primary-outline-0 rounded-pill my-2 px-4">Order Now</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="pricing-item">
+                                <div class="pricing-content rounded">
+                                    <div class="d-flex align-items-center justify-content-between bg-light rounded-top border-3 border-bottom border-primary p-4">
+                                        <h1 class="display-4 mb-0">
+                                            <small class="align-top text-muted" style="font-size: 22px; line-height: 45px;">$</small>99<small class="text-muted" style="font-size: 16px; line-height: 40px;">/Mo</small>
+                                        </h1>
+                                        <h5 class="text-primary text-uppercase m-0">Family Plan</h5>
+                                    </div>
+                                    <div class="p-4">
+                                        <p><i class="fa fa-check text-primary me-2"></i>Full Body Massage</p>
+                                        <p><i class="fa fa-check text-primary me-2"></i>Deep Tissue Massage</p>
+                                        <p><i class="fa fa-check text-primary me-2"></i>Hot Stone Massage</p>
+                                        <p><i class="fa fa-check text-primary me-2"></i>Tissue Body Polish</p>
+                                        <p><i class="fa fa-check text-primary me-2"></i>Foot & Nail Care</p>
+                                        <a href="" class="btn btn-primary btn-primary-outline-0 rounded-pill my-2 px-4">Order Now</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="pricing-item">
+                                <div class="pricing-content rounded">
+                                    <div class="d-flex align-items-center justify-content-between bg-light rounded-top border-3 border-bottom border-primary p-4">
+                                        <h1 class="display-4 mb-0">
+                                            <small class="align-top text-muted" style="font-size: 22px; line-height: 45px;">$</small>149<small class="text-muted" style="font-size: 16px; line-height: 40px;">/Mo</small>
+                                        </h1>
+                                        <h5 class="text-primary text-uppercase m-0">VIP Plan</h5>
+                                    </div>
+                                    <div class="p-4">
+                                        <p><i class="fa fa-check text-primary me-2"></i>Full Body Massage</p>
+                                        <p><i class="fa fa-check text-primary me-2"></i>Deep Tissue Massage</p>
+                                        <p><i class="fa fa-check text-primary me-2"></i>Hot Stone Massage</p>
+                                        <p><i class="fa fa-check text-primary me-2"></i>Tissue Body Polish</p>
+                                        <p><i class="fa fa-check text-primary me-2"></i>Foot & Nail Care</p>
+                                        <a href="" class="btn btn-primary btn-primary-outline-0 rounded-pill my-2 px-4">Order Now</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="pricing-item">
+                                <div class="pricing-content rounded">
+                                    <div class="d-flex align-items-center justify-content-between bg-light rounded-top border-3 border-bottom border-primary p-4">
+                                        <h1 class="display-4 mb-0">
+                                            <small class="align-top text-muted" style="font-size: 22px; line-height: 45px;">$</small>199<small class="text-muted" style="font-size: 16px; line-height: 40px;">/Mo</small>
+                                        </h1>
+                                        <h5 class="text-primary text-uppercase m-0">Most Plan</h5>
+                                    </div>
+                                    <div class="p-4">
+                                        <p><i class="fa fa-check text-primary me-2"></i>Full Body Massage</p>
+                                        <p><i class="fa fa-check text-primary me-2"></i>Deep Tissue Massage</p>
+                                        <p><i class="fa fa-check text-primary me-2"></i>Hot Stone Massage</p>
+                                        <p><i class="fa fa-check text-primary me-2"></i>Tissue Body Polish</p>
+                                        <p><i class="fa fa-check text-primary me-2"></i>Foot & Nail Care</p>
+                                        <a href="" class="btn btn-primary btn-primary-outline-0 rounded-pill my-2 px-4">Order Now</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
 
         <!-- Footer Start -->
