--- a/gallery.html
+++ b/gallery.html
@@ -46,18 +46,15 @@
                     <div class="row align-items-center">
                         <div class="col-lg-8">
                             <div class="d-flex flex-wrap">
-                                <a href="#" class="me-4 text-light"><i class="fas fa-map-marker-alt text-primary me-2"></i>Find A Location</a>
-                                <a href="#" class="me-4 text-light"><i class="fas fa-phone-alt text-primary me-2"></i>+01234567890</a>
-                                <a href="#" class="text-light"><i class="fas fa-envelope text-primary me-2"></i>Example@gmail.com</a>
+                                <a href="#" class="me-4 text-light"><i class="fas fa-map-marker-alt text-primary me-2"></i>Bogotá</a>
+                                <a href="#" class="me-4 text-light"><i class="fas fa-phone-alt text-primary me-2"></i>+57 3213260498</a>
                             </div>
 
                         </div>
                         <div class="col-lg-4">
                             <div class="d-flex align-items-center justify-content-end">
                                 <a href="#" class="me-3 btn-square border rounded-circle nav-fill"><i class="fab fa-facebook-f"></i></a>
-                                <a href="#" class="me-3 btn-square border rounded-circle nav-fill"><i class="fab fa-twitter"></i></a>
                                 <a href="#" class="me-3 btn-square border rounded-circle nav-fill"><i class="fab fa-instagram"></i></a>
-                                <a href="#" class="btn-square border rounded-circle nav-fill"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
                     </div>
@@ -67,18 +64,19 @@
                 <div class="container px-0">
                     <nav class="navbar navbar-light navbar-expand-xl">
                         <a href="index.html" class="navbar-brand">
-                            <h1 class="text-primary display-4">Sparlex</h1>
+                            <img src="img/2.png" class="logo img-fluid" alt="Image">
                         </a>
                         <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                             <span class="fa fa-bars text-primary"></span>
                         </button>
                         <div class="collapse navbar-collapse bg-light py-3" id="navbarCollapse">
                             <div class="navbar-nav mx-auto border-top">
-                                <a href="index.html" class="nav-item nav-link">Home</a>
-                                <a href="about.html" class="nav-item nav-link">About</a>
-                                <a href="service.html" class="nav-item nav-link">Services</a>
-                                <a href="price.html" class="nav-item nav-link">Price</a>
-                                <div class="nav-item dropdown">
+                                <a href="index.html" class="nav-item nav-link active">Inicio</a>
+                                <a href="about.html" class="nav-item nav-link">Nosotros</a>
+                                <a href="service.html" class="nav-item nav-link">Sevicios</a>
+                                <a href="gallery.html" class="nav-item nav-link">Comprar</a>                               
+                            <a href="contact.html" class="nav-item nav-link">Contáctanos</a>
+                                <!-- <div class="nav-item dropdown">
                                     <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
                                     <div class="dropdown-menu m-0 bg-secondary rounded-0">
                                         <a href="team.html" class="dropdown-item">Team</a>
@@ -87,13 +85,12 @@
                                         <a href="appointment.html" class="dropdown-item">Appointment</a>
                                         <a href="404.html" class="dropdown-item">404 page</a>
                                     </div>
-                                </div>
-                                <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+                                </div> -->
                             </div>
-                            <div class="d-flex align-items-center flex-nowrap pt-xl-0">
+                            <!-- <div class="d-flex align-items-center flex-nowrap pt-xl-0">
                                 <button class="btn-search btn btn-primary btn-primary-outline-0 rounded-circle btn-lg-square" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search"></i></button>
                                 <a href="index.html" class="btn btn-primary btn-primary-outline-0 rounded-pill py-3 px-4 ms-4">Book Appointment</a>
-                            </div>
+                            </div> -->
                         </div>
                     </nav>
                 </div>
@@ -103,7 +100,7 @@
 
 
         <!-- Modal Search Start -->
-        <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <!-- <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-fullscreen">
                 <div class="modal-content rounded-0">
                     <div class="modal-header">
@@ -118,7 +115,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Modal Search End -->
 
 
@@ -126,12 +123,12 @@
         <!-- Header Start -->
         <div class="container-fluid bg-breadcrumb py-5">
             <div class="container text-center py-5">
-                <h3 class="text-white display-3 mb-4">Our Gallery</h1>
-                <ol class="breadcrumb justify-content-center mb-0">
+                <h3 class="text-white display-3 mb-4">Nuestros productos</h1>
+                <!-- <ol class="breadcrumb justify-content-center mb-0">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                     <li class="breadcrumb-item"><a href="#">Pages</a></li>
                     <li class="breadcrumb-item active text-white">Gallery</li>
-                </ol>    
+                </ol>     -->
             </div>
         </div>
         <!-- Header End -->
@@ -140,10 +137,10 @@
         <!-- Gallery Start -->
         <div class="container-fluid gallery py-5">
             <div class="container py-5">
-                <div class="text-center mx-auto mb-5" style="max-width: 800px;">
+                <!-- <div class="text-center mx-auto mb-5" style="max-width: 800px;">
                     <p class="fs-4 text-uppercase text-primary">Our Gallery</p>
                     <h1 class="display-4 mb-4">Let's See Our Gallery</h1>
-                </div>
+                </div> -->
                 <div class="tab-class text-center">
                     <ul class="nav nav-pills d-inline-flex justify-content-center mb-5">
                         <li class="nav-item">
@@ -153,7 +150,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="d-flex py-2 mx-3 border border-primary bg-light rounded-pill" data-bs-toggle="pill" href="#tab-2">
-                                <span class="text-dark" style="width: 150px;">Skin Care</span>
+                                <span class="text-dark" style="width: 150px;">Termos</span>
                             </a>
                         </li>
                         <li class="nav-item">
@@ -181,7 +178,7 @@
                                             <div class="gallery-img">
                                                 <img class="img-fluid rounded w-100" src="img/gallery-1.jpg" alt="">
                                                 <div class="gallery-overlay p-4">
-                                                    <h4 class="text-secondary">Skin Care</h4>
+                                                    <h4 class="text-secondary">Termos/h4>
                                                 </div>
                                                 <div class="search-icon">
                                                     <a href="img/gallery-1.jpg" data-lightbox="Gallery-1" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
@@ -275,10 +272,7 @@
                                     <div class="row g-4">
                                         <div class="col-lg-3">
                                             <div class="gallery-img">
-                                                <img class="img-fluid rounded w-100" src="img/gallery-9.jpg" alt="">
-                                                <div class="gallery-overlay p-4">
-                                                    <h4 class="text-secondary">Skin Care</h4>
-                                                </div>
+                                                <img class="img-fluid rounded w-100" src="img/team-2.jpeg" alt="">
                                                 <div class="search-icon">
                                                     <a href="img/gallery-9.jpg" data-lightbox="Gallery-9" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
                                                 </div>
@@ -286,16 +280,13 @@
                                         </div>
                                         <div class="col-lg-3">
                                             <div class="gallery-img">
-                                                <img class="img-fluid rounded w-100" src="img/gallery-10.jpg" alt="">
-                                                <div class="gallery-overlay p-4">
-                                                    <h4 class="text-secondary">Skin Care</h4>
-                                                </div>
+                                                <img class="img-fluid rounded w-100" src="img/termo-2.jpeg" alt="">
                                                 <div class="search-icon">
                                                     <a href="img/gallery-10.jpg" data-lightbox="Gallery-10" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-3">
+                                        <!-- <div class="col-lg-3">
                                             <div class="gallery-img">
                                                 <img class="img-fluid rounded w-100" src="img/gallery-5.jpg" alt="">
                                                 <div class="gallery-overlay p-4">
@@ -316,7 +307,7 @@
                                                     <a href="img/gallery-1.jpg" data-lightbox="Gallery-12" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
