--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
                                         <img src="img/Fotos store/Store-cuchillo -2.jpeg" class="img-fluid w-100 rounded-top bg-light" alt="">
                                     </div>
                                     <div class="team-text rounded-bottom text-center p-4">
-                                        <h3 class="text-white">Cuchillo</h3>
-                                        <p class="mb-0 text-white">Cuchillo</p>                                      
+                                        <h3 class="text-white">Cuchillos</h3>
+                                        <p class="mb-0 text-white">Juego de cuchillos</p>                                      
                                         
                                     </div>
                                     <div class="text-center p-4">
@@ -210,11 +210,11 @@
                             <div class="col-md-6 col-lg-6 col-xl-3">
                                 <div class="team-item">
                                     <div class="team-img rounded-top">
-                                        <img src="img/Fotos store/tarro-pól.jpeg" class="img-fluid w-100 rounded-top bg-light" alt="">
+                                        <img src="img/Fotos store/team-5.jpeg" class="img-fluid w-100 rounded-top bg-light" alt="">
                                     </div>
                                     <div class="team-text rounded-bottom text-center p-4">
-                                        <h3 class="text-white">Termos</h3>
-                                        <p class="mb-0 text-white">Termo en acero</p>                                      
+                                        <h3 class="text-white">Huevo dinosaurio</h3>
+                                        <p class="mb-0 text-white">Para el baño de tu bebé</p>                                      
                                         
                                     </div>
                                     <div class="text-center p-4">
