--- a/gallery.html
+++ b/gallery.html
@@ -123,7 +123,7 @@
         <!-- Header Start -->
         <div class="container-fluid bg-breadcrumb py-5">
             <div class="container text-center py-5">
-                <h3 class="text-white display-3 mb-4">Nuestros productos</h1>
+                <h3 class="text-white display-3 mb-4"></h1>
                 <!-- <ol class="breadcrumb justify-content-center mb-0">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                     <li class="breadcrumb-item"><a href="#">Pages</a></li>
@@ -155,7 +155,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="d-flex mx-3 py-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill" href="#tab-3">
-                                <span class="text-dark" style="width: 150px;">Stream Bath</span>
+                                <span class="text-dark" style="width: 150px;">Maletas</span>
                             </a>
                         </li>
                         <li class="nav-item">
@@ -319,9 +319,7 @@
                                         <div class="col-lg-3">
                                             <div class="gallery-img">
                                                 <img class="img-fluid rounded w-100" src="img/gallery-11.jpg" alt="">
-                                                <div class="gallery-overlay p-4">
-                                                    <h4 class="text-secondary">Stream Bath</h4>
-                                                </div>
+
                                                 <div class="search-icon">
                                                     <a href="img/gallery-11.jpg" data-lightbox="Gallery-13" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
                                                 </div>
