--- a/gallery.html
+++ b/gallery.html
@@ -231,9 +231,9 @@
                                         </div>
                                         <div class="col-lg-3">
                                             <div class="gallery-img">
-                                                <img class="img-fluid rounded w-100" src="img/gallery-6.jpg" alt="">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/maleta-2.jpeg" alt="">
                                                 <div class="gallery-overlay p-4">
-                                                    <h4 class="text-secondary">Stream Bath</h4>
+                                                    <h4 class="text-secondary"></h4>
                                                 </div>
                                                 <div class="search-icon">
                                                     <a href="img/gallery-6.jpg" data-lightbox="Gallery-6" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
@@ -318,43 +318,76 @@
                                     <div class="row g-4">
                                         <div class="col-lg-3">
                                             <div class="gallery-img">
-                                                <img class="img-fluid rounded w-100" src="img/gallery-11.jpg" alt="">
+                                                <img class="img-fluid rounded w-100" src="img/team-1.jpeg" alt="">
 
                                                 <div class="search-icon">
-                                                    <a href="img/gallery-11.jpg" data-lightbox="Gallery-13" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                    <a href="mg/team-1.jpeg" data-lightbox="Gallery-13" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-lg-3">
                                             <div class="gallery-img">
-                                                <img class="img-fluid rounded w-100" src="img/gallery-12.jpg" alt="">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/maleta.jpeg" alt="">
                                                 <div class="gallery-overlay p-4">
-                                                    <h4 class="text-secondary">Stream Bath</h4>
+                                                    <h4 class="text-secondary"></h4>
                                                 </div>
                                                 <div class="search-icon">
-                                                    <a href="img/gallery-12.jpg" data-lightbox="Gallery-14" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                    <a href="img/Fotos store/maleta.jpeg" data-lightbox="Gallery-14" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-lg-3">
                                             <div class="gallery-img">
-                                                <img class="img-fluid rounded w-100" src="img/gallery-2.jpg" alt="">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/maleta-1.jpeg" alt="">
                                                 <div class="gallery-overlay p-4">
-                                                    <h4 class="text-secondary">Stream Bath</h4>
+                                                    <h4 class="text-secondary"></h4>
                                                 </div>
                                                 <div class="search-icon">
-                                                    <a href="img/gallery-2.jpg" data-lightbox="Gallery-15" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                    <a href="img/Fotos store/maleta-1.jpeg" data-lightbox="Gallery-15" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-lg-3">
                                             <div class="gallery-img">
-                                                <img class="img-fluid rounded w-100" src="img/gallery-6.jpg" alt="">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/maleta-2.jpeg" alt="">
                                                 <div class="gallery-overlay p-4">
-                                                    <h4 class="text-secondary">Stream Bath</h4>
+                                                    <h4 class="text-secondary"></h4>
                                                 </div>
                                                 <div class="search-icon">
-                                                    <a href="img/gallery-6.jpg" data-lightbox="Gallery-16" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                    <a href="img/Fotos store/maleta-2.jpeg" data-lightbox="Gallery-16" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <div class="gallery-img">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/maleta-3.jpeg" alt="">
+                                                <div class="gallery-overlay p-4">
+                                                    <h4 class="text-secondary"></h4>
+                                                </div>
+                                                <div class="search-icon">
+                                                    <a href="img/Fotos store/maleta-3.jpeg" data-lightbox="Gallery-26" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <div class="gallery-img">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/maleta-4.jpeg" alt="">
+                                                <div class="gallery-overlay p-4">
+                                                    <h4 class="text-secondary"></h4>
+                                                </div>
+                                                <div class="search-icon">
+                                                    <a href="img/Fotos store/maleta-4.jpeg" data-lightbox="Gallery-26" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <div class="gallery-img">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/maleta-5.jpeg" alt="">
+                                                <div class="gallery-overlay p-4">
+                                                    <h4 class="text-secondary"></h4>
+                                                </div>
+                                                <div class="search-icon">
+                                                    <a href="img/Fotos store/maleta-5.jpeg" data-lightbox="Gallery-26" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
                                                 </div>
                                             </div>
                                         </div>
