--- a/gallery.html
+++ b/gallery.html
@@ -149,12 +149,12 @@
                         </li>
                         <li class="nav-item">
                             <a class="d-flex mx-3 py-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill" href="#tab-4">
-                                <span class="text-dark" style="width: 150px;">Stone Therapy</span>
+                                <span class="text-dark" style="width: 150px;">Calculadoras</span>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="d-flex mx-3 py-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill" href="#tab-5">
-                                <span class="text-dark" style="width: 150px;">Face Massage</span>
+                                <span class="text-dark" style="width: 150px;">Agendas</span>
                             </a>
                         </li>
                     </ul>
@@ -264,23 +264,34 @@
                                         </div>
                                         <div class="col-lg-3">
                                             <div class="gallery-img">
-                                                <img class="img-fluid rounded w-100" src="img/Fotos store/maleta-4.jpeg" alt="">
-                                                <div class="gallery-overlay p-4">
-                                                    <h4 class="text-secondary"></h4>
-                                                </div>
-                                                <div class="search-icon">
-                                                    <a href="img/Fotos store/maleta-4.jpeg" data-lightbox="Gallery-26" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-3">
-                                            <div class="gallery-img">
                                                 <img class="img-fluid rounded w-100" src="img/Fotos store/maleta-5.jpeg" alt="">
                                                 <div class="gallery-overlay p-4">
                                                     <h4 class="text-secondary"></h4>
                                                 </div>
                                                 <div class="search-icon">
                                                     <a href="img/Fotos store/maleta-5.jpeg" data-lightbox="Gallery-26" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <div class="gallery-img">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/maleta-6.jpeg" alt="">
+                                                <div class="gallery-overlay p-4">
+                                                    <h4 class="text-secondary"></h4>
+                                                </div>
+                                                <div class="search-icon">
+                                                    <a href="img/Fotos store/maleta-6.jpeg" data-lightbox="Gallery-26" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <div class="gallery-img">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/maleta-8.jpeg" alt="">
+                                                <div class="gallery-overlay p-4">
+                                                    <h4 class="text-secondary"></h4>
+                                                </div>
+                                                <div class="search-icon">
+                                                    <a href="img/Fotos store/maleta-8.jpeg" data-lightbox="Gallery-26" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
                                                 </div>
                                             </div>
                                         </div>
@@ -294,45 +305,34 @@
                                     <div class="row g-4">
                                         <div class="col-lg-3">
                                             <div class="gallery-img">
-                                                <img class="img-fluid rounded w-100" src="img/gallery-13.jpg" alt="">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/calculadora-1.jpeg" alt="">
                                                 <div class="gallery-overlay p-4">
-                                                    <h4 class="text-secondary">Stone Therapy</h4>
+                                                    <h4 class="text-secondary"></h4>
                                                 </div>
                                                 <div class="search-icon">
-                                                    <a href="img/gallery-13.jpg" data-lightbox="Gallery-17" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                    <a href="img/Fotos store/calculadora-1.jpeg" data-lightbox="Gallery-17" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-lg-3">
                                             <div class="gallery-img">
-                                                <img class="img-fluid rounded w-100" src="img/gallery-2.jpg" alt="">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/calculadora-2.jpeg" alt="">
                                                 <div class="gallery-overlay p-4">
-                                                    <h4 class="text-secondary">Stone Therapy</h4>
+                                                    <h4 class="text-secondary"></h4>
                                                 </div>
                                                 <div class="search-icon">
-                                                    <a href="img/gallery-2.jpg" data-lightbox="Gallery-18" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                    <a href="img/Fotos store/calculadora-2.jpeg" data-lightbox="Gallery-18" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-lg-3">
                                             <div class="gallery-img">
-                                                <img class="img-fluid rounded w-100" src="img/gallery-3.jpg" alt="">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/calculadora-3.jpeg" alt="">
                                                 <div class="gallery-overlay p-4">
-                                                    <h4 class="text-secondary">Stone Therapy</h4>
+                                                    <h4 class="text-secondary"></h4>
                                                 </div>
                                                 <div class="search-icon">
-                                                    <a href="img/gallery-3.jpg" data-lightbox="Gallery-19" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-3">
-                                            <div class="gallery-img">
-                                                <img class="img-fluid rounded w-100" src="img/gallery-7.jpg" alt="">
-                                                <div class="gallery-overlay p-4">
-                                                    <h4 class="text-secondary">Stone Therapy</h4>
-                                                </div>
-                                                <div class="search-icon">
-                                                    <a href="img/gallery-7.jpg" data-lightbox="Gallery-20" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                    <a href="img/Fotos store/calculadora-3.jpeg" data-lightbox="Gallery-19" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
                                                 </div>
                                             </div>
                                         </div>
