--- a/gallery.html
+++ b/gallery.html
@@ -346,67 +346,45 @@
                                     <div class="row g-4">
                                         <div class="col-lg-3">
                                             <div class="gallery-img">
-                                                <img class="img-fluid rounded w-100" src="img/gallery-4.jpg" alt="">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/agenda.jpeg" alt="">
                                                 <div class="gallery-overlay p-4">
-                                                    <h4 class="text-secondary">Face Massage</h4>
+                                                    <h4 class="text-secondary"></h4>
                                                 </div>
                                                 <div class="search-icon">
-                                                    <a href="img/gallery-4.jpg" data-lightbox="Gallery-21" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                    <a href="img/Fotos store/agenda.jpeg" data-lightbox="Gallery-21" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-lg-3">
                                             <div class="gallery-img">
-                                                <img class="img-fluid rounded w-100" src="img/gallery-6.jpg" alt="">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/agenda-1.jpeg" alt="">
                                                 <div class="gallery-overlay p-4">
-                                                    <h4 class="text-secondary">Face Massage</h4>
+                                                    <h4 class="text-secondary"></h4>
                                                 </div>
                                                 <div class="search-icon">
-                                                    <a href="img/gallery-6.jpg" data-lightbox="Gallery-22" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                    <a href="img/Fotos store/agenda-1.jpeg" data-lightbox="Gallery-22" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-lg-3">
                                             <div class="gallery-img">
-                                                <img class="img-fluid rounded w-100" src="img/gallery-8.jpg" alt="">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/agenda-2.jpeg" alt="">
                                                 <div class="gallery-overlay p-4">
-                                                    <h4 class="text-secondary">Face Massage</h4>
+                                                    <h4 class="text-secondary"></h4>
                                                 </div>
                                                 <div class="search-icon">
-                                                    <a href="img/gallery-8.jpg" data-lightbox="Gallery-23" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                    <a href="img/Fotos store/agenda-2.jpeg" data-lightbox="Gallery-23" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-lg-3">
                                             <div class="gallery-img">
-                                                <img class="img-fluid rounded w-100" src="img/gallery-14.jpg" alt="">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/agenda-3.jpeg" alt="">
                                                 <div class="gallery-overlay p-4">
-                                                    <h4 class="text-secondary">Face Massage</h4>
+                                                    <h4 class="text-secondary"></h4>
                                                 </div>
                                                 <div class="search-icon">
-                                                    <a href="img/gallery-14.jpg" data-lightbox="Gallery-24" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-3">
-                                            <div class="gallery-img">
-                                                <img class="img-fluid rounded w-100" src="img/gallery-4.jpg" alt="">
-                                                <div class="gallery-overlay p-4">
-                                                    <h4 class="text-secondary">Face Massage</h4>
-                                                </div>
-                                                <div class="search-icon">
-                                                    <a href="img/gallery-4.jpg" data-lightbox="Gallery-25" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-3">
-                                            <div class="gallery-img">
-                                                <img class="img-fluid rounded w-100" src="img/gallery-8.jpg" alt="">
-                                                <div class="gallery-overlay p-4">
-                                                    <h4 class="text-secondary">Face Massage</h4>
-                                                </div>
-                                                <div class="search-icon">
-                                                    <a href="img/gallery-8.jpg" data-lightbox="Gallery-26" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                    <a href="img/Fotos store/agenda-3.jpeg" data-lightbox="Gallery-24" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
                                                 </div>
                                             </div>
                                         </div>
