--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="container">
                 <div class="container-fluid team py-5">
                     <div class="container py-5">
-                        <div class="text-center mx-auto mb-5" style="max-width: 800px;">
+                        <div class="text-center mx-auto mb-5 py-5" style="max-width: 800px;">
                             <p class="fs-4 text-uppercase text-primary">Nuestro catalogo</p>
                             <!-- <h1 class="display-4 mb-4">Spa & Beauty Specialist</h1> -->
                         </div>
@@ -272,8 +272,9 @@
 
         
         <!-- About Start -->
-        <div class="text-center mx-auto mb-5 py-5" style="max-width: 800px;">
-            <p class="display-4">Conócenos</p>
+        <div class="text-center mx-auto mb-5">
+            <h1 class="display-4 mb-4 ce">Conócenos</h1>
+            <!-- <p class="display-4">Conócenos</p> -->
             <!-- <h1 class="display-4 mb-4">Spa & Beauty Specialist</h1> -->
         </div>
 
